--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         </div>
                         <div class="home-img padd-15">
-                            <img src="imgaes/hero.jpg" alt="">
+                            <img src="imgaes/migavel_cas.jpg" alt="">
                         </div>
                     </div>
                 </div>
